--- a/Python Workbook 5.ipynb
+++ b/Python Workbook 5.ipynb
@@ -49,7 +49,7 @@
         "\n",
         "\n",
         "\n",
-        "* It will also be used to calculate integreals numerically, which will be used with __Chapter 18.pdf__ where we calculate the __arc length__ along curves in the $(x,y)$-plane."
+        "* It will also be used to calculate integrals numerically, which will be used with __Chapter 18.pdf__ where we calculate the __arc length__ along curves in the $(x,y)$-plane."
       ]
     },
     {
@@ -85,9 +85,6 @@
       "source": [
         "# Part A - Plotting Shaded Areas\n",
         "\n",
-        "* In __Part A__ we write the code to generate shaded plots of the area between a curve and the $x$-axis ($y=0$).\n",
-        "\n",
-        "\n",
         "* __REQUIRED:__ In most cases, the only information you need to supply is the function $f(x)$ and the limits of integration $a$ and $b$.\n"
       ]
     },
@@ -98,14 +95,14 @@
       },
       "source": [
         "def f(x):\n",
-        "    return sin(pi*x)                      # Change this line for each function.\n",
+        "    return sin(pi*x)    # Change this line for each function.\n",
         "\n",
         "#-------------------------------------------------------------------------------\n",
         "\n",
         "a=0   # Set the lower limit of integration\n",
         "b=2   # Set the upper limit of integration"
       ],
-      "execution_count": 11,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -127,7 +124,7 @@
           "height": 284
         },
         "id": "nKBl3O5lRguA",
-        "outputId": "f07f4cae-7c40-4ef1-f336-8d29761ae865"
+        "outputId": "76ece1c2-5194-49df-ecc6-8d9c13e22a4d"
       },
       "source": [
         "#Setup axes, figure limits and steps sizes--------------------------------------------------------------\n",
@@ -162,7 +159,7 @@
         "#Save the figure as a pdf file------------------------------------------------------------------------\n",
         "plt.savefig('FileName.pdf',bbox_inches='tight') # Change FileName.pdf as you want "
       ],
-      "execution_count": 25,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "display_data",
@@ -199,12 +196,12 @@
           "height": 17
         },
         "id": "4VCBkmO1Yxj2",
-        "outputId": "3f180a2e-abe3-4889-9543-7cd60c9e1cc7"
+        "outputId": "b346edee-1ea0-4d4b-bd60-0d729fb99f39"
       },
       "source": [
         "files.download('FileName.pdf') # Change FileName.pdf to match the file name used in the cell above."
       ],
-      "execution_count": 26,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "display_data",
@@ -264,7 +261,7 @@
           "output_type": "display_data",
           "data": {
             "application/javascript": [
-              "download(\"download_a0053d0f-b177-4e88-92ba-57706a8e44c5\", \"FileName.pdf\", 15325)"
+              "download(\"download_63700c10-9267-4142-98c5-9f3deb049c06\", \"FileName.pdf\", 15325)"
             ],
             "text/plain": [
               "<IPython.core.display.Javascript object>"
@@ -295,11 +292,14 @@
       "source": [
         "# Part B - Calculating & Plotting Arc Lengths\n",
         "\n",
-        "* In __Part B__ we write the code to __plot the arc length__ along a curve in the $(x,y)$-plane ($y=0$).\n",
         "\n",
-        "* This section also numerically calculates the arc length of the curve using the __trapezoidal rule.__\n",
         "\n",
-        "* __REQUIRED:__ In most cases, the only information you need to supply is the function $f(x)$, its derivative $\\frac{df}{dx}(x)$ and the limits of integration $a$ and $b$, and the number of points $N$ to be used in the trapezoidal rule.\n"
+        "* __REQUIRED:__ In most cases, the only information you need to supply is: \n",
+        "\n",
+        " 1. The function $f(x)$\n",
+        " 2. Its derivative $\\frac{df}{dx}(x)$.\n",
+        " 3. The limits of integration $a$ and $b$.\n",
+        " 4. The number of points $N$ to be used in the trapezoidal rule.\n"
       ]
     },
     {
@@ -309,16 +309,18 @@
       },
       "source": [
         "def f(x):\n",
-        "    return 1-x**2            # You only need to change this piece for each curve\n",
+        "    return 1-x**2            # Change this line for each new curve\n",
         "\n",
         "def df(x):\n",
         "    return -2*x            # Calculate the derivative by hand and supply it here\n",
         "\n",
         "a= -1                # The lower limit of integration\n",
         "b= 2                 # The upper limit of integration\n",
+        "\n",
+        "\n",
         "N=500                # The number of points for the trapezoidal rule."
       ],
-      "execution_count": 31,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -329,7 +331,7 @@
       "source": [
         "### Calculating the arc-length\n",
         "\n",
-        "__IMPORTANT:__ Usually it is not necessary to change any of the code in the cell below."
+        "__IMPORTANT:__ Usually it is __not__ necessary to change any of the code in the cell below."
       ]
     },
     {
@@ -385,7 +387,7 @@
       "source": [
         "## Plotting the arc length.\n",
         "\n",
-        "* All of the information for the plot has already been supplied for the calculation of the arc length, simply run the cell below to plot it."
+        "* __NOTE:__ All of the information for the plot has already been supplied for the calculation of the arc length, simply run the cell below to plot it."
       ]
     },
     {
@@ -396,7 +398,7 @@
           "height": 285
         },
         "id": "uin3BYPqd9dh",
-        "outputId": "6395c9c1-1c20-41cc-99a7-6028c62d28d2"
+        "outputId": "485ea402-082b-4d83-d438-85050fa4a9ab"
       },
       "source": [
         "#Setup axes, figure limits and steps sizes--------------------------------------------------------------\n",
@@ -431,7 +433,7 @@
         "#Save the figure as a pdf file------------------------------------------------------------------------\n",
         "plt.savefig('FileName2.pdf',bbox_inches='tight') # Change FileName2.pdf as you want "
       ],
-      "execution_count": 46,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "display_data",
@@ -468,12 +470,12 @@
           "height": 17
         },
         "id": "TLywPMvWfoio",
-        "outputId": "eea3523a-a1fd-414f-aaf2-507c269f64bd"
+        "outputId": "db66dd00-982b-414f-f114-2812d5ca9c3a"
       },
       "source": [
         "files.download('FileName2.pdf') # Change FileName2.pdf to match the file name used in the cell above."
       ],
-      "execution_count": 47,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "display_data",
@@ -533,7 +535,7 @@
           "output_type": "display_data",
           "data": {
             "application/javascript": [
-              "download(\"download_f7af1613-fe4b-491b-a956-6ffb0badb262\", \"FileName2.pdf\", 14227)"
+              "download(\"download_f8fe7ac1-8465-4c15-bacb-612fa6a4fff8\", \"FileName2.pdf\", 14227)"
             ],
             "text/plain": [
               "<IPython.core.display.Javascript object>"
