--- a/Python Workbook 5.ipynb
+++ b/Python Workbook 5.ipynb
@@ -87,7 +87,16 @@
         "\n",
         "* __REQUIRED:__ In most cases, the only information you need to supply is the function $f(x)$ and the limits of integration $a$ and $b$.\n",
         "\n",
-        "* __*=multiply__, __\\\\=divide,__ __**=power__, __exp(x)=$e^{x}$__, __sqrt(x)=$\\sqrt{x}$__, __(x)**(1/5)=$\\sqrt[5]{x}$__"
+        "* Some common operations are:\n",
+        " * __a*b=$ab$__\n",
+        " * __a/b=$\\frac{a}{b}$__\n",
+        " * __a/(b+c)=$\\frac{a}{b+c}$__\n",
+        "  * __x**y=$x^{y}$__\n",
+        " * __exp(x)=$e^{x}$__\n",
+        " * __sqrt(x)=$\\sqrt{x}$__\n",
+        " * __(x)**(1/n)=$\\sqrt[n]{x}$__\n",
+        "\n",
+        " (the python code is shown in bold face)."
       ]
     },
     {
@@ -552,7 +561,35 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yJDZwMWofy2u"
+        "id": "yJDZwMWofy2u",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0d775020-66bc-4063-9c94-2481564a931b"
+      },
+      "source": [
+        "3/5"
+      ],
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.6"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8CkDYjyGBYBo"
       },
       "source": [
         ""
